frontend/test/should_pass/ret_005.grg
using basic_model_002;

test r : (A, AB, B, N) {
	x : A;
	y : AB;
	z : C;
	n : N;

	return (x, y, y, n);
}

