frontend/test/should_fail/ret_018.grg
using basic_model_002;

test r : (A, AB, B, N) {
	x : A;
	y : AB;
	n : N;
	z : B;
}

